feat(playlist-plugin): introduce repeat one mode
- Introduced a new "repeat one" mode to the playlist plugin.
- Modified the UI to include a toggle button that cycles through three modes: no repeat, repeat all,
  and repeat one.

BREAKING CHANGE:

- Changed the API to toggle the repeat mode and the initialization options.
- The repeat mode is no longer a boolean. It is now a number representing each mode (0: no repeat,
  1: repeat all, 2: repeat one).

--- a/packages/pillarbox-playlist/src/lang/de.json
+++ b/packages/pillarbox-playlist/src/lang/de.json
@@ -1,7 +1,9 @@
 {
-  "Next Item": "Nächstes Element",
+  "Next Item": "Nächstes element",
+  "No Repeat": "Keine Wiederholung",
   "Playlist": "Wiedergabeliste",
   "Previous Item": "Vorheriges Element",
-  "Repeat": "Wiederholen",
+  "Repeat All": "Alle Wiederholen",
+  "Repeat One": "Einzelnes Wiederholen",
   "Shuffle": "Mischen"
 }
