--- a/packages/pillarbox-playlist/src/lang/en.json
+++ b/packages/pillarbox-playlist/src/lang/en.json
@@ -1,7 +1,9 @@
 {
   "Next Item": "Next Item",
+  "No Repeat": "No Repeat",
   "Playlist": "Playlist",
   "Previous Item": "Previous Item",
-  "Repeat": "Repeat",
+  "Repeat All": "Repeat All",
+  "Repeat One": "Repeat One",
   "Shuffle": "Shuffle"
 }
