--- a/packages/pillarbox-playlist/src/lang/rm.json
+++ b/packages/pillarbox-playlist/src/lang/rm.json
@@ -1,7 +1,9 @@
 {
   "Next Item": "Element proxim",
+  "No Repeat": "Nagins Repeter",
   "Playlist": "Glista da reprodukziun",
   "Previous Item": "Element precedent",
-  "Repeat": "Repeter",
+  "Repeat All": "Repeter Tut",
+  "Repeat One": "Repeter In",
   "Shuffle": "Maschadar"
 }
