feat(cast): add customizable google cast button and native launcher
Resolves #75 by introducing two new components:

- `GoogleCastButton`: a customizable Cast button based on SvgButton, allowing developers to
  integrate with their own visual identity. The icon can be customized via `icon` or `iconName`.
- `GoogleCastLauncher`: a wrapper around the native `<google-cast-launcher>` element for a
  plug-and-play experience.

The enableDefaultCastButton option has been renamed enableDefaultCastLauncher.

--- a/packages/google-cast-sender/src/lang/de.json
+++ b/packages/google-cast-sender/src/lang/de.json
@@ -1,3 +1,4 @@
 {
-  "Playing on {1}": "Wiedergabe auf {1}"
+  "Playing on {1}": "Wiedergabe auf {1}",
+  "Use Google Cast": "Google Cast verwenden"
 }
