--- a/packages/google-cast-sender/src/lang/it.json
+++ b/packages/google-cast-sender/src/lang/it.json
@@ -1,3 +1,4 @@
 {
-  "Playing on {1}": "In riproduzione su {1}"
+  "Playing on {1}": "In riproduzione su {1}",
+  "Use Google Cast": "Usa Google Cast"
 }
