--- a/packages/google-cast-sender/src/lang/fr.json
+++ b/packages/google-cast-sender/src/lang/fr.json
@@ -1,3 +1,4 @@
 {
-  "Playing on {1}": "Lecture en cours sur {1}"
+  "Playing on {1}": "Lecture en cours sur {1}",
+  "Use Google Cast": "Utiliser Google Cast"
 }
